# python_course_management_system

./: .gitignore  README.md  launch.py  pyproject.toml
.streamlit/: config.toml
backend/: main.py  requirements.txt
backend/classes/: index.py
backend/db/: courses.json  users.json
backend/utils/users/: index.py
frontend/: app.py  courses.py  create_course.py  dashboard.py  login.py  main.py  register.py
