[project]
name = "python-course-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
    "watchfiles>=1.0.5",
]
